@@ -53,6 +53,8 @@ Bug Fixes:
 	Happiness and unhappiness are shown for foreign cities
 	Whip/Draft Anger is shown for team member cities
 
+- Victory Screen
+	Removed election statistical error random calculation if game is multiplayer
 
 MODDING
 
